# homebrew-knock-knock

./: .gitignore  CLAUDE.md  README.ko.md  README.md  biome.json  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
Casks/: knock-knock.rb
plan/: plan.md
src/: App.tsx  main.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/plugins/tauri-plugin-accelerometer/: Cargo.toml  build.rs
src-tauri/plugins/tauri-plugin-accelerometer/guest-js/: index.ts
src-tauri/plugins/tauri-plugin-accelerometer/permissions/: default.toml
src-tauri/plugins/tauri-plugin-accelerometer/permissions/autogenerated/: reference.md
src-tauri/plugins/tauri-plugin-accelerometer/permissions/autogenerated/commands/: calibrate.toml  start_stream.toml  stop_stream.toml
src-tauri/plugins/tauri-plugin-accelerometer/permissions/schemas/: schema.json
src-tauri/plugins/tauri-plugin-accelerometer/src/: commands.rs  desktop.rs  iokit_hid.rs  lib.rs
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/commands/: app_list.rs  audio.rs  mod.rs  system_actions.rs
src/components/: AboutSection.tsx  ActionPicker.tsx  CalibrationView.tsx  PatternEditor.tsx  PatternList.tsx  PurchaseScreen.tsx  SensitivitySlider.tsx  SettingsPanel.tsx  SoundSettings.tsx  TapDots.tsx  TrialBanner.tsx
src/core/: action-executor.ts  action-mapper.ts  license-manager.ts  settings-manager.ts  tap-detector.ts
src/hooks/: useAccelerometer.ts  useLocale.ts  useSettings.ts  useTapDetector.ts  useTrial.ts
src/lib/: actions.ts  constants.ts  i18n.ts  types.ts
