[package]
name = "knock-knock"
version = "0.1.0"
edition = "2024"

[lib]
name = "knock_knock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-accelerometer = { path = "./plugins/tauri-plugin-accelerometer" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSRunningApplication",
] }
objc2-foundation = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
