[package]
name = "knock-knock"
version = "0.1.1"
edition = "2024"
default-run = "knock-knock"

[lib]
name = "knock_knock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "knockknock-helper"
path = "src/bin/knockknock-helper.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-accelerometer = { path = "./plugins/tauri-plugin-accelerometer" }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plist = "1.8.0"
tauri-plugin-dialog = "2.7.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSRunningApplication",
    "NSEvent",
    "NSGraphicsContext",
    "NSSound",
] }
objc2-core-graphics = { version = "0.3", features = ["CGEvent", "CGEventTypes"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSGeometry"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
