[package]
name = "tauri-plugin-accelerometer"
version = "0.1.0"
edition = "2024"
links = "tauri-plugin-accelerometer"

[dependencies]
tauri = "2"
tauri-plugin = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
